--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "express-validator": "^6.14.3",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.22",
     "sequelize": "^6.28.0"
